# lextok

./: .gitignore  CMakeLists.txt  LICENSE  README.md  workspace.sh
examples/: CMakeLists.txt  common.h  example1.cpp  example2.cpp
inc/: ct_lib.h  lextok.h  tokenizer.h
lib/: ct_lib.h  lextok.h
src/: main.cpp
tests/: CMakeLists.txt  common.h  test_alphabet_match.cpp  test_decimal_digit_match.cpp  test_digit_match.cpp  test_lower_alphabet_match.cpp  test_real_world_match.cpp  test_upper_alphabet_match.cpp
