cmake_minimum_required(VERSION 3.10)
project(LexTok VERSION 0.3.0 LANGUAGES CXX DESCRIPTION "A lexical tokenization header-only library")
set(CMAKE_CXX_STANDARD 17)

find_package(Doxygen REQUIRED dot)

option(BUILD_LEXTOK_DOCS "Generate HTML documentation for the Lexical Tokenizer (requires Doxygen and dot)" OFF)
option(ENABLE_LEXTOK_TESTS "Run tests to verify the LexTok library" OFF)
option(BUILD_LEXTOK_EXAMPLES "Build the examples" OFF)

if (BUILD_LEXTOK_DOCS)
	if (NOT DOXYGEN_FOUND)
		message(FATAL_ERROR "Doxygen and dot are needed to build the documentation.")
	endif()
	set(DOXYGEN_TAB_SIZE 2)
	set(DOXYGEN_WARN_NO_PARAMDOC YES)
	set(DOXYGEN_WARN_AS_ERROR YES)
	set(DOXYGEN_SOURCE_BROWSER YES)
	set(DOXYGEN_HTML_DYNAMIC_SECTIONS YES)
	set(DOXYGEN_DOCSET_FEEDNAME "Lexical Tokenizer documentation")
	set(DOXYGEN_DOCSET_BUNDLE_ID org.nbidyanta.lextok)
	set(DOXYGEN_DOCSET_PUBLISHER_ID org.nbidyanta.doxygen)
	set(DOXYGEN_DOCSET_PUBLISHER_NAME Nilangshu)
	set(DOXYGEN_GENERATE_TREEVIEW YES)
	set(DOXYGEN_HTML_TIMESTAMP YES)
	set(DOXYGEN_TEMPLATE_RELATIONS YES)
	set(DOXYGEN_DOT_TRANSPARENT YES)
	set(DOXYGEN_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/docs/lextok")
	set(DOXYGEN_USE_MD_FILE_AS_MAINPAGE README.md)
	set(DOXYGEN_EXAMPLE_PATH examples/)
	doxygen_add_docs(lextok-docs README.md lib/ examples/ COMMENT "Generate Doxygen HTML documentation for the Lexical Tokenizer")
endif()

add_library(lextok INTERFACE)
target_include_directories(lextok INTERFACE lib)

if (ENABLE_LEXTOK_TESTS)
	enable_testing()
	add_subdirectory(tests)
endif()

if (BUILD_LEXTOK_EXAMPLES)
	add_subdirectory(examples)
endif()
